--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: #3D2C24;
+  color: #2A1E17;
   background-color: #FFF8F0;
 
   font-synthesis: none;
